--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -90,3 +90,16 @@ input[type=submit] {
     font-size:12px;
     color:#666;
 }
+
+#ICP {
+    width:100%; 
+    height:50px; 
+    line-height:10px; 
+    background:#ccc; 
+    position:fixed; 
+    bottom:0px; 
+    left:0px; 
+    font-size:14px; 
+    color:#000; 
+    text-align:center;
+}
